force-app/main/default/objects/Opportunity_Query_Mapping__mdt/Opportunity_Query_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>Opportunity Query Mapping</label>
    <pluralLabel>Opportunities Query Mapping</pluralLabel>
</CustomObject>