force-app/main/default/objects/Opportunity_Query_Mapping__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>To active this field check the value</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>