force-app/main/default/objects/Opportunity_Query_Mapping__mdt/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>