force-app/main/default/objects/Opportunity_Query_Mapping__mdt/fields/Index__c.field-meta.xml
<CustomField>
    <fullName>Index__c</fullName>
    <inlineHelpText>This value is used to order the fields</inlineHelpText>
    <label>Index</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>