force-app/main/default/objects/Opportunity_Query_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Index__c</columns>
    <columns>Name__c</columns>
    <columns>API_Name__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>